# napi-ios

./: .gitignore  README.md  build_all_ios.sh  build_all_react_native.sh  build_all_vision.sh  build_nativescript.sh  build_npm_ios.sh  build_tklivesync.sh  build_utils.sh  package.json  prepare_dSYMs.sh  test_extend.js  testesm.sh
NativeScript/: CMakeLists.txt  NativeScript.h
NativeScript/cli/: main.cpp
NativeScript/ffi/: AutoreleasePool.h  AutoreleasePool.mm  Block.h  Block.mm  CFunction.h  CFunction.mm  Cif.h  Cif.mm  Class.h  Class.mm  ClassBuilder.h  ClassBuilder.mm  ClassMember.h  ClassMember.mm  Closure.h  Closure.mm  Enum.h  Enum.mm  InlineFunctions.h  InlineFunctions.mm  Interop.h  Interop.mm  JSObject.h  JSObject.mm  NativeScriptException.h  NativeScriptException.mm  ObjCBridge.h  ObjCBridge.mm  Object.h  Object.mm  ObjectRef.h  ObjectRef.mm  Protocol.h  Protocol.mm  Struct.h  Struct.mm  Tasks.cpp  Tasks.h  TypeConv.h  TypeConv.mm  (+5 more)
NativeScript/napi/common/: ConcurrentMap.h  js_native_api.h  napi.h  native_api_util.h  node-api.h  spinmutex.h
NativeScript/napi/hermes/: js_runtime.h  jsr.cpp  jsr.h
NativeScript/napi/hermes/include/hermes/: hermes_api.h
NativeScript/napi/hermes/include_old/hermes/: hermes.h
NativeScript/napi/hermes/include_old/jsi/: decorator.h
NativeScript/napi/jsc/: js_native_api.h  jsc-api.cpp  jsc-api.h  jsr.cpp  jsr.h
NativeScript/napi/quickjs/: js_native_api.h  js_native_api_types.h  jsr.cpp  jsr.h  quickjs-api.c  quicks-runtime.h
NativeScript/napi/quickjs/mimalloc-dev/src/prim/unix/: prim.c
NativeScript/napi/quickjs/source/: libregexp.c  libunicode.h  quickjs-atom.h  quickjs.c  quickjs.h
NativeScript/napi/v8/: jsr.cpp  jsr.h  v8-api-internals.h  v8-api.cpp  v8-api.h  v8-module-loader.cpp  v8-module-loader.h
NativeScript/runtime/: App.h  App.mm  Console.cpp  Console.h  NativeScript.mm  Performance.cpp  Performance.h  Require.cpp  Require.h  Runtime.cpp  Runtime.h  RuntimeConfig.cpp  SpinLock.h  Timers.h  Timers.mm  Util.h  main.cpp
NativeScript/runtime/modules/: RuntimeModules.h
NativeScript/runtime/modules/app/: App.mm
NativeScript/runtime/modules/console/: Console.cpp  Console.h
NativeScript/runtime/modules/module/: ModuleInternal.cpp  ModuleInternal.h
NativeScript/runtime/modules/performance/: Performance.cpp  Performance.h
NativeScript/runtime/modules/timers/: Timers.mm
NativeScript/runtime/modules/url/: URL.cpp  URL.h  URLSearchParams.cpp  URLSearchParams.h
NativeScript/runtime/modules/worker/: ConcurrentMap.h  ConcurrentQueue.cpp  ConcurrentQueue.h  Message.h  MessageJSON.cpp  MessageJSON.h  MessageV8.cpp  MessageV8.h  Worker.h  Worker.mm  WorkerImpl.h  WorkerImpl.mm
cli_tests/: error.js  esm_a.mjs  esm_b.mjs  index.js  main_worker.js  module_a.js  threadsafe.js  view_controller_app.js  worker.js
examples/: appkit.js  calayer.js  package.json  url_session.js
metadata-generator/: .gitignore  CMakeLists.txt  deno.json
metadata-generator/include/: IR.h  Metadata.h  MetadataReader.h  MetadataWriter.h  Umbrella.h
metadata-generator/metadata/: metadata.ios-sim.arm64.h  metadata.ios-sim.arm64.nsmd  metadata.ios-sim.x86_64.h  metadata.ios-sim.x86_64.nsmd  metadata.ios.arm64.h  metadata.ios.arm64.nsmd  metadata.ios.x86_64.nsmd  metadata.macos.arm64.h  metadata.visionos-sim.arm64.nsmd  metadata.visionos.arm64.nsmd  metadata.visionos.x86_64.nsmd
metadata-generator/src/: Umbrella.cpp  main.cpp
metadata-generator/src/IR/: Class.cpp  Factory.cpp  Member.cpp  TypeSpec.cpp
metadata-generator/src/MetadataWriter/: Class.cpp  TypeSpec.cpp  Writer.cpp
metadata-generator/src/TSEmitter/: TypeSpec.cpp
napi-ios.xcodeproj/: project.pbxproj
scripts/: build_xcframework.mts  metagen.ts  package.json  write_metadata.ts
v8ios.xcodeproj/: project.pbxproj
